[package]
name = "db-client"
version = "0.1.0"
edition = "2021"

[dependencies]
charybdis = "0.7.10"
charybdis_macros = "0.7.10"
charybdis-migrate = "0.7.10"
tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
scylla = { version = "0.15.1", features = ["full-serialization"] }
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
colored = "2.1.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }

scylla = "0.15"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3.6"
uuid = "1.0"
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }